alteracoes ambiente dev

--- a/bionic64/Vagrantfile
+++ b/bionic64/Vagrantfile
@@ -1,18 +1,34 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "hashicorp/bionic64"
 
-  config.vm.define "dockerhost" do |dockerhost|
-    dockerhost.vm.provider "virtualbox" do |vb|
-      vb.memory = 512
-      vb.cpus = 1
-      vb.name = "ubuntu_dockerhost"
-    end
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 512
+    vb.cpus = 1
+  end
 
-    dockerhost.vm.network "forwarded_port", guest: 16543, host: 16543
+  config.vm.define "mysqlserver" do |mysqlserver|
+    mysqlserver.vm.network "public_network", ip: "192.168.0.121"
 
-    dockerhost.vm.provision "shell",
-      inline: "apt-get update && apt-get install -y docker.io docker-compose"
-    dockerhost.vm.provision "shell",
-      inline: "docker-compose -f /vagrant/docker-compose.yml up -d"
+    mysqlserver.vm.provision "shell",
+      inline: "cat /vagrant/configs/id_bionic.pub >> .ssh/authorized_keys"
+  end
+
+  config.vm.define "ansible" do |ansible|
+    ansible.vm.network "public_network", ip: "192.168.0.120"
+
+    ansible.vm.provision "shell",
+      inline: "cp /vagrant/id_bionic  /home/vagrant && \
+              chmod 600 /home/vagrant/id_bionic && \
+              chown vagrant:vagrant /home/vagrant/id_bionic"
+
+    ansible.vm.provision "shell",
+      inline: "apt-get update && \
+               apt-get install -y software-properties-common && \
+               apt-add-repository --yes --update ppa:ansible/ansible && \
+               apt-get install -y ansible"
+
+     ansible.vm.provision "shell",
+       inline: "ansible-playbook -i /vagrant/configs/ansible/hosts \
+                  /vagrant/configs/ansible/playbook.yml"
   end
 end
